# layer-mcp-github

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  server.py  tmp.md
.cursor/: mcp.json
.github/workflows/: ci.yml  docker-push.yml
app/: __init__.py  __main__.py  allowlist.py  ask_common.py  citations.py  config.py  correlation.py  github_client.py  http_routes.py  llm.py  log_context.py  logging_config.py  main.py  mcp_app.py  mcp_http.py  mcp_server.py  pipeline.py  repo_allowlist.py  streaming.py  tools.py  version.py
app/allowlist/: __init__.py  repos.py  resolve.py
app/ask/: __init__.py  citations.py  common.py  pipeline.py  prompts.py  response.py  sse.py  streaming.py
app/clients/: __init__.py  github.py  llm.py
app/mcp/: __init__.py  app.py  http.py  jsonrpc.py  ops.py  server.py  tools.py  tools_helpers.py
app/observability/: __init__.py  correlation.py  log_context.py  logging_config.py  request_context.py
docs/: design.md  log-json-schema.md  schema.md  smoke-test.md
layer_mcp_github_v1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_jsonrpc.py  test_ops.py  test_response.py
