[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "layer-mcp-github-v1"
version = "1.0.0"
description = "MCP server for Q&A over allowlisted GitHub repos with LLM synthesis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.20.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
